--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ width: 300px; /* Adicionei uma largura fixa manual */
  border-radius: 20px; /* Adiciona cantos arredondados */
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
 width: 250px; /* Adicionei uma largura fixa manual */
-     max-height: 400px; /* Adicionei uma altura máxima */
+     height: 550px; /* Adicionei uma altura máxima */
 }
 #qrCode {
     margin: 20px 0; /* Spacing above and below QR Code */
